--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,43 @@
 .card{
     margin:0 auto;
-    margin-top: 50px;
+    margin-top: 18px;
 }
 
 .btn{
     padding: 28px;
-    margin-top: 40px ;
+    margin-top: 67px ;
+    
 } 
 
  #dropdown{
     border: 2px solid black;
     border-radius: 15px;
 } 
+
+.img{
+    padding:0px;
+}
+
+.max-score{
+    padding-left:20px;
+}
+
+.card-text{
+    font-size: 2rem;
+}
+
+.score-1{
+    display:inline;
+    font-size: 4rem;
+}
+
+.score-2{
+    display:inline;
+    font-size: 4rem;
+}
+
+.to{
+    display:inline;
+    font-size: 4rem;
+    padding-left: 2.5px;
+}
